--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>my second repo</title>
 </head>
 <body>
-    hello rakib
+    <h1>hello gys</h1>
+    <h2>im coding</h2>
 </body>
 </html>
