--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>hello gys</h1>
     <h2>im coding</h2>
+   <p>We are writing paragraph....</p>
 </body>
 </html>
